# VendingMachine

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml  sonarcloud.yml
app/: .coverage  __init__.py  app.py  coverage.xml  db.py  engine.py  machine_stocks.py  products.py  queryUtils.py  schema.py  vending_machine.py
app/database/: __init__.py  db.py  engine.py  queryUtils.py  schema.py
app/endpoints/: machine_stocks.py  products.py  stock_timelines.py  vending_machine.py
app/static/: apiDoc.yaml  index.yaml  openapi.yaml
app/tests/: .coverage  conftest.py  coverage.xml  test_add_object_to_db.py  test_delete_object_from_db.py  test_edit_object_in_db.py  test_endpoints.py  test_endpoints_machine_stock.py  test_endpoints_product.py  test_endpoints_stock_timelines.py  test_endpoints_vending_machine.py  test_utils.py
