[tool.poetry]
name = "VendingMachine"
version = "0.1.0"
description = "vending machines tracker"
authors = ["Suphawit <suphawit.won@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
sqlalchemy = "^1.4.46"
pymysql = "^1.0.2"
pytest = "^7.2.1"
pre-commit = "^2.20.0"
flake8 = "^5.0.1"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"
python-dotenv = "^0.21.1"
flask-wtf = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
